Fix T41955: lamp error: double update for all lamps

This is actually also safe for 2.72 :)